--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,16 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <!-- your scripts -->
     <!-- <script src="env/config.js"></script> -->
+    <script>
+      if (!/(&|\?)username=/.test(window.location.search)) {
+        var newSearch = window.location.search;
+        if (newSearch !== '' & newSearch !== '?') {
+          newSearch += '&';
+        }
+        newSearch += 'username=' + (prompt('What is your name?') || 'anonymous');
+        window.location.search = newSearch;
+      }
+    </script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
